# v2-PureOS

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  test_empty_line.py  update_tests.py
.antigravitycli/: 937b18f9-afc0-4314-8665-7a59565508b2.json
.github/workflows/: ci.yml
docs/: architecture.md  cron.md  filesystem.md  index.md  ipc.md  shell_and_commands.md  text_tools.md
pureos/: processes.py  services.py
src/pureos/: __init__.py  __main__.py  audit.py  boot.py  builtin_services.py  cli.py  commands.py  config.py  drivers.py  fs.py  ipc.py  kernel.py  memory.py  network.py  parser.py  pkg.py  processes.py  services.py  shell.py  syslog.py  users.py  utils.py
tests/: conftest.py  test_cli.py  test_cron.py  test_desktop_cli.py  test_desktop_inputbar.py  test_desktop_integration.py  test_desktop_output_capture.py  test_desktop_statusbar.py  test_desktop_terminal.py  test_editor.py  test_firewall.py  test_fs_extra.py  test_fs_persistent.py  test_fs_symlinks.py  test_integration_shell.py  test_ipc.py  test_job_control.py  test_kernel.py  test_kernel_init_errors.py  test_memory.py  test_network.py  test_network_echo.py  test_networking_expansion.py  test_new_features.py  test_persistence_recovery.py  test_pkg.py  test_plugins.py  test_posix_permissions.py  test_process_cmd.py  test_processes.py  test_security_governance.py  test_service.py  test_service_exceptions.py  test_services.py  test_services_stop_all.py  test_shell_commands.py  test_shell_scripting.py  test_smoke.py  test_syslog.py  test_system.py  (+6 more)
(+57 files in other folders)
