[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "v2-pureos"
version = "0.1.0"
description = "v2-PureOS minimal OS-like package"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Copilot", email = "copilot@example.com"}]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
target-version = ["py310"]
